k8s_manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ukd-orchestration
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: ukd-orchestration
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ukd-orchestration
    spec:
      containers:
        - image: __DOCKER_REGISTRY__/__REGISTRY_REPO__/__IMAGE_NAME__:__IMAGE_VERSION__
          name: ukd-orchestration
          ports:
            - containerPort: 9085
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: 256Mi
            limits:
              cpu: "250m"
              memory: 256Mi

      securityContext:
        fsGroup: 1000
