k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ukd-orchestration-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9085
  selector:
    app: ukd-orchestration
